tests/duarouter/errors/testsuite.duarouter
# Tests what happens if the net is not given
no_net

# Tests what happens if the net is not available
false_net

# Tests what happens if the output is not given
no_output

# Tests what happens if the output can not be written
false_output

# Tests what happens if the input is not given
no_input
no_input_ignore

# Tests what happens if an unknown option is passed
unknown_option

# Tests what happens if an unknown measure is passed as weights attribute
unknown_measure

# Tests what happens if the given alternatives do not exist
false_input_alts

# Tests what happens if the given flows do not exist
false_input_flows

# Tests what happens if the given sumo-routes do not exist
false_input_sumo

# Tests what happens if the given trip-definitions do not exist
false_input_trips

# Default departlane is false
default_departlane_false

# Default departpos is false
default_departpos_false

# Default departspeed is false
default_departspeed_false

# Default arrivallane is false
default_arrivallane_false

# Default arrivalpos is false
default_arrivalpos_false

# Default arrivalspeed is false
default_arrivalspeed_false

# Tests for importing trips with an empty vehicle class
empty_vclass

# given an unknown vType should be an error
unknown_vType

# unknown vType should be replaced by DEFAULT_VEHTYPE when ignoring errors
unknown_vType_ignore
